2011-01-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Add default values for settings to the code to remove the dependence
	on a separate openvassd.conf settings file.

	* src/preferences.c: Add list of standard settings.
	(preferences_process): Initialize with standard settings and process
	settings file afterwards.
	(preferences_new): Removed. Default settings are kept internally now.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Removed useless check for port
	as always a sensible is set.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Removed command line option
	"--dump-cfg" as it returns no valueable information.

	* doc/openvassd.8.in: Updated accordingly. Updated date
	and improved titel and description. Added "-f" in synopsis.
	Extended authors section to explain some more background.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/openvassd.8.in: New default port is 9391.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (init_openvassd, main): Renamed any variables
	"iana_port" to "scanner_port". These are only used in this module.
	(main): Set default port to 9391.

2011-01-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/CMakeLists.txt: Add SYSCONFDIR to definitions.

	* src/openvassd.c (main): Return SYSCONFDIR instead of OPENVAS_SYSCONF_DIR
	for -y, to match the pre-cmake behaviour.

2011-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.c (preferences_new): Add preferences for vhost
	scanning to initial configuration file.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Reverted wrongly changed patch version.

	* INSTALL: Updated for OpenVAS-4.

2011-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c: Removed code path for not HAVE_SETSID.