@@ -1056,7 +1056,6 @@ main (int argc, char *argv[], char *envp[])
   static gchar *config_file = NULL;
   static gboolean quiet = FALSE;
   static gboolean print_specs = FALSE;
-  static gboolean gen_config = FALSE;
   static gboolean print_sysconfdir = FALSE;
   GError *error = NULL;
   GOptionContext *option_context;
@@ -1076,8 +1075,6 @@ main (int argc, char *argv[], char *envp[])
     {"quiet", 'q', 0, G_OPTION_ARG_NONE, &quiet,
      "Quiet (do not issue any messages to stdout)", NULL},
     {"cfg-specs", 's', G_OPTION_FLAG_HIDDEN, G_OPTION_ARG_NONE, &print_specs,
-     "", NULL},
-    {"gen-config", 'g', G_OPTION_FLAG_HIDDEN, G_OPTION_ARG_NONE, &gen_config,
      "", NULL},
     {"sysconfdir", 'y', 0, G_OPTION_ARG_NONE, &print_sysconfdir,
      "Print system configuration directory (set at compile time)", NULL},
@@ -1101,9 +1098,6 @@ main (int argc, char *argv[], char *envp[])
 
   if (quiet)
     be_quiet = 1;
-
-  if (gen_config)
-    exit_early = 1;             /* allow cipher initalization */
 
   if (print_specs)
     {
